less/header.less
#header {
    background:none;
    margin:0 0 0px;
    padding:0;
    position:relative;
    display:block;
    min-height:35px;
    #top_header {
        height:36px;
        margin-top:12px;
        #globalsearch {
            width:254px;
            float:left;
            text-align:left;
            line-height:1em;
            border:solid 1px @exodo-border-color;
            height:32px;
            background:#fff;
            .searchbutton {
                border:0 none;
                padding:0;
                width:26px;
                height:26px;
                float:right;
                text-indent:-9999px;
                cursor:pointer;
                background:url("https://exo.do/images/exodo/misc/search-button-bg.png") no-repeat left 0;
                background-attachment:scroll;
            }
            .searchbutton:focus {
                outline: none;
            }
            .searchbutton:hover {
                background:url("https://exo.do/images/exodo/misc/search-button-bg.png") no-repeat left -26px;
            }
            #search-form {
                width:252px;
                height:28px;
                padding:2px;
                input.textbox {
                    height:22px;
                    width:218px;
                    border:medium none;
                    font-size:14px;
                    vertical-align:middle;
                    padding:1px;
                }
                input.textbox:focus {
                    outline: none;
                }
            }
        }
        #toplinks {
            font-size:14px;
            text-align:right;
            background:0;
            float:right;
            a:link {
                text-decoration:none;
            }
            ul.nouser {
                li {
                    display:inline;
                    font-size:14px;
                    padding:3px 4px;
                    text-transform:lowercase;
                    line-height:28px;
                }
                & > li {
                    line-height:32px;
                }
            }
            ul.isuser {
                li {
                    display:inline;
                    position:relative;
                    float:right;
                    clear:left;
                    padding-right:10px;
                    a {
                        display:block;
                        padding: 3px 4px;
                        font-size:14px;
                    }
                }
                & > li {
                    text-transform:lowercase;
                    line-height:27px;
                }
                li.welcomelink {
                    display:block;
                    float:right;
                    clear:left;
                    padding: 3px 10px 3px 0;
                    text-transform:none;
                    a {
                        display:inline;
                        float:none;
                        clear:none;
                        margin-left:0;
                    }
                }
            }
        }
        .advanced_search {
            float:left;
            font-size:12px;
            line-height:32px;
            padding-left:12px;
            margin-bottom:0;
            li {
                list-style:outside none none;
            }
        }
    }
    #middle_header {
        height:100px;
        background: @exodo-gradient;
        position:relative;
        margin: 5px 0;
        .tile {
			height: 120px;
			display: inline-block;
			float: right;
			border-left: 12px solid rgb(246, 246, 246);
			width: 132px;
			position: relative;
			transition: all 0.3s ease 0s;
	        @media (max-width: @screen-sm-min) { display: none; }
	        &:hover,
	        &.selected {
				background-color: @exodo-dark;
	        }
			a {
				text-transform: lowercase;
				display: block;
				background-attachment: scroll;
				background-repeat: no-repeat;
				background-image: url("https://exo.do/images/exodo/misc/nav-icons-bg.png");
				width: 120px;
				height: 120px;
				text-align: left;
				color: #FFF;
				font: 16px/23px "Open Sans",sans-serif;
				text-decoration: none;
				position: relative;
		        &.exodo-community {
					background-position: left -256px !important;
		        }
				span {
					position: absolute;
					left: 12px;
					bottom: 12px;
					line-height: 16px;
					padding-right: 12px;
				}
			}
        }
        
        .col-header {
			overflow: hidden;
			height: 100%;
        }
    }
}
#header #top_header #toplinks ul.nouser, #header #top_header #toplinks ul.isuser {
    display:block;
    float:right;
    clear:left;
    list-style:none;
    margin-bottom:0;
}
#header #top_header #toplinks ul.isuser &>li:first-child,.toplinks ul.isuser &>li:first-child a {
    padding-right:0;
}
#navbar-wrapper{
	
	min-height: 20px;
	
	#header-menu {
	    background-color: @exodo-dark;
	    border: none;
	    box-shadow: none;
	    z-index: 10;
	    border-radius: 0;
		
		position: fixed;
		left: 0;
		top: 0;
		width: 100%;
		padding: 0 4%;
		
		.loading-bar {
		 	width: 0%;
		 	position: absolute;
		 	left: 0px;
		 	height: 5px;
		 	background: @exodo-gradient;
		 	z-index: 10000;
		 	-webkit-transition: width 0.2s ease-in;
		 	-moz-transition: width 0.2s ease-in;
		 	-o-transition: width 0.2s ease-in;
		 	-ms-transition: width 0.2s ease-in;
		 	transition: width 0.2s ease-in;
		}
		.container-fluid {
			padding: 0;
		}
		
		.pagination-block i.fa {
			color: white;
		}
		
		.navbar-nav > li > a {
			color: #ccc;
		}
		
		.navbar-nav > li > a:hover, .pagination-block i.fa:hover, .navbar-nav > li > a:focus, .pagination-block i.fa:focus{
			color: white;
		}
		
		.navbar-nav > li > a:hover, .navbar-nav > li > a:focus {
			background-color:#232323;
		}
		
	}
#header-menu.affix {
	    margin:0;
	    width:100%;
	    padding:0 4%;
	    margin:0 -4%;
	    transition:all 0.5s ease;
	    top: 0;
	}
	
}
.header {


    background-color: @exodo-dark;
	
	.navbar-fix {
		
	}
	
	
	#user_label {
		img {
			border: 1px solid #454;
			width: 19px;
			height: 19px;
		}

		span {
			font-size: 14px;
			font-weight: 400;
		}
	}

	.forum-title {
		margin: 0px;
	}

	.forum-logo {
		max-width: 100px;
		
		
		padding-top: 18px;
		padding-bottom: 0px;
		margin-left: 10px;
		
	}
	

	.header-topic-title {
		text-align: center;
		font-style: italic;
		padding: 15px 15px;
		font-size: 13px;
		line-height: 20px;
		text-overflow: ellipsis;
		overflow: hidden;
		white-space: nowrap;
		span {
			text-overflow: ellipsis;
			white-space: nowrap;
			color: @exodo-lightdark;
		}
	}

	.pagination-block {
		margin-right: 10px !important;

		.progress-container {
			height: 2px;
			position: relative;
			bottom: 10px;
			background: #666;
			width: 90%;
			margin: auto;

			.progress-bar {
				background-color: #eee;
				height: 2px;
			}
		}

		.dropdown {
			
			color: #9d9d9d;
		}
		.dropdown-toggle {
			display: inline-block;
			padding-left: 5px;
			padding-right: 5px;
		}

		.open>a {
			background-color: rgba(0, 0, 0, 0)!important;
		}


		.dropdown-menu {
			padding: 10px;
		}

		@media (max-width: @screen-sm-min) {
			.progress-container {
				display: inline-block;
				position: static;
				bottom: 0px;
				margin-left: 1em;
				width: 100px;
				margin-bottom: 3px;
			}
		}
	}

	#notif-list {
		overflow-x: hidden;
		overflow-y: auto;
		max-height: 250px;
		padding: 0;

		li {
			font-size: 12px;
			width: 400px;
			text-align: left;
			margin-bottom: 5px;
				margin-right: 5px;
			margin-left: 5px;
			list-style-type: none;
			padding: 0.5em;
			clear: both;

	img {
					max-width: 32px;
					max-height: 32px;
					float: left;
				}
				
			a {
				white-space: normal;
				overflow: hidden;
				margin: 0;
				// padding: 3px 20px;
				text-overflow: ellipsis;

				.text {
				// white-space: normal;
					margin-left: 40px;
					margin-right: 50px;
					display: block;
					min-height: 32px;
				}
			}

			&.unread {
				.bg-variant(@state-warning-bg);

				.mark-read:after {
					content: "\f111";
				}

				.mark-read:hover:after {
					content: "\f10c";
				}
			}

			.mark-read {
				color: @text-muted;

				&:after {
					font-family: "FontAwesome";
					content: "\f10c";
					padding: 4px 1rem;
					position: relative;
					top: 1px;
				}

				&:hover {
					color: @gray-dark;
					.pointer;

					&:after {
						content: "\f111";
					}
				}
			}
				}
			}

	.notif-dropdown-link {
		// margin-top: 1em;
				border-top: 1px solid rgba(163, 163, 163, 0.5);

				a {
					display: block;
					text-align: center;
			padding: 0.5em 0;
					font-weight: 600;
				}
			}

	#chat-list {
		#notif-list;

		li {
			.pointer;
			width: 200px;

			a {
				white-space: nowrap;
				line-height: 30px;

				img {
					width: 32px;
					margin-right: 1em;
				}
			}

			&.no_active a {
				text-align: center;
				white-space: normal;
			}
		}
	}
}


.breadcrumb {
	margin-bottom: 10px;
	li {
		max-width: 100%;
		.text-ellipsis;
	}
}

#reconnect {
	font-size: 14px;
	-webkit-transition: opacity 250ms linear;
	-moz-transition: opacity 250ms linear;
	-ms-transition: opacity 250ms linear;
	-o-transition: opacity 250ms linear;
	transition: opacity 250ms linear;
	-moz-opacity: 0.00;
	opacity: 0.00;
	min-width: 45px;

	&.active {
		-moz-opacity: 1;
		opacity: 1;
	}

	& +div.tooltip .tooltip-inner {
		width: 350px;
	}
}

.unread-count:after {
	content: attr(data-content);
	position: relative;
	left: -6px;
	top: -7px;
	font-size: 10px;
	text-align: center;
	border: 1px solid #890405;
	color: #fff;
	font-weight: bold;
	min-width: 20px;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
	background: #c91106;
	padding: 1px 2px;
	font-family: @font-family-sans-serif;
}

/* editado lastnode 
.notransition {
	transition: none !important;
}

.navbar-collapse {
	
	.navbar-nav {
		li, span, a {
			outline: none;
			white-space: nowrap;
		}
	}

	margin: 0 !important;
}

	.logo-image {
		padding: 16px 16px 16px 0;
	}
*/

.container-fluid {
	
padding-left: 50px;
padding-right: 50px;
}

.loading-bar {
 	width: 0%;
 	position: absolute;
 	left: 0px;
 	height: 3px;
 	background: @exodo-gradient;
 	z-index: 10000;
 	-webkit-transition: width 0.2s ease-in;
 	-moz-transition: width 0.2s ease-in;
 	-o-transition: width 0.2s ease-in;
 	-ms-transition: width 0.2s ease-in;
 	transition: width 0.2s ease-in;
}

